--- a/.github/workflows/build_test_rust.yml
+++ b/.github/workflows/build_test_rust.yml
@@ -2,9 +2,9 @@ name: Build and test Rust
 
 on:
   push:
-    branches: [ "main", "paycalc-rust" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "paycalc-rust" ]
+    branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
