--- a/paycalc-rs/Cargo.toml
+++ b/paycalc-rs/Cargo.toml
@@ -4,19 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bech32 = "0.9"
-chrono = "0.4.42"
-cln-rpc = "0.5.0"
+common-rs = { path = "../common-rs" }
 dotenv = "0.15.0"
-futures-util = "0.3"
-hex-conservative = "0.3.0"
-reqwest = { version = "0.12.26", features = ["json"] }
+payer = { path = "../payer" }
 rusqlite = "0.37.0"
-serde = "1.0.228"
-serde_json = "1.0"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
-tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
-uuid = { version = "1.0", features = ["v4"] }
 
 [[bin]]
 name = "main"
