--- a/payer/Cargo.toml
+++ b/payer/Cargo.toml
@@ -23,3 +23,10 @@ tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
 urlencoding = "2.1.3"
 uuid = { version = "1.0", features = ["v4"] }
 
+[[bin]]
+name = "main_nsec_tool"
+path = "src/main_nsec_tool/main.rs"
+
+[[bin]]
+name = "main_try_zap"
+path = "src/main_try_zap/main.rs"
