--- a/.github/workflows/build_test_rust.yml
+++ b/.github/workflows/build_test_rust.yml
@@ -21,5 +21,7 @@ jobs:
     - name: Build Rust
       run: cd paycalc-rs && cargo build
     - name: Run unit tests
-      run: cd paycalc-rs && cargo test
+      run: |
+        cd payer && cargo test && cd ..
+        cd paycalc-rs && cargo test && cd ..
 
